fix(gallery): Fix vertical CSS spacing

--- a/themes/even/sass/_main.scss
+++ b/themes/even/sass/_main.scss
@@ -330,3 +330,10 @@ main {
     }
   }
 }
+
+.gallery {
+  a {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+}
